# EE123_bioelectricity

./: README.md  pyproject.toml
lectures/: 0_day1.pptx  1a_bioelec_SS.pptx  1b_bioelec_QSS.pptx  2a_neurons.pptx  4a_bio_backgrounder.pptx  4b_morphogenesis.pptx
src/: edebug.py  eplot.py  main_neuron.py  main_vlab1.py  main_vlab2.py  sim.py  sim_toolbox.py
